Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    def __init__(self, name, weight):\n",
+    "        self.name = name\n",
+    "        self.weight = weight\n",
+    "        \n",
+    "    def sleep(self):\n",
+    "        if self.nocturnal == True:\n",
+    "            print('This animal sleeps during the day.')\n",
+    "        else:\n",
+    "            print('This animal keeps normal hours.')\n",
+    "            \n",
+    "    def eat(self, food):\n",
+    "        if self.food_type == 'omnivore' or (self.food_type == 'herbivore' and food == 'plants') or (self.food_type == 'carnivore' and food == 'meat'):\n",
+    "            print('{} the {} thinks {} is yummy!'.format(self.name,self.species,food))\n",
+    "        else:\n",
+    "            print(\"{} doesn't want to eat that\".format(self.name))"
    ]
   },
   {
@@ -72,12 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.species = 'elephant'\n",
+    "        self.size = 'enormous'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -95,12 +114,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.species = 'tiger'\n",
+    "        self.size = 'large'\n",
+    "        self.food_type = 'carnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -118,12 +142,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.species = 'raccoon'\n",
+    "        self.size = 'small'\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -141,12 +170,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.species = 'gorilla'\n",
+    "        self.size = 'large'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -174,12 +208,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "    animal = None\n",
+    "    if animal_type == 'elephant':\n",
+    "        animal = Elephant(name,weight)\n",
+    "    if animal_type == 'gorilla':\n",
+    "        animal = Gorilla(name,weight)\n",
+    "    if animal_type == 'tiger':\n",
+    "        animal = Tiger(name,weight)\n",
+    "    if animal_type == 'raccoon':\n",
+    "        animal = Raccoon(name,weight)\n",
+    "    zoo.append(animal)\n",
+    "    return zoo"
    ]
   },
   {
@@ -198,11 +242,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Elephant at 0x7fc58cf0d390>,\n",
+       " <__main__.Elephant at 0x7fc58cf0d3c8>,\n",
+       " <__main__.Raccoon at 0x7fc58cf0d400>,\n",
+       " <__main__.Raccoon at 0x7fc58cf0d438>,\n",
+       " <__main__.Gorilla at 0x7fc58cf0d470>,\n",
+       " <__main__.Tiger at 0x7fc58cf0d4a8>,\n",
+       " <__main__.Tiger at 0x7fc58cf0d4e0>,\n",
+       " <__main__.Tiger at 0x7fc58cf0d518>]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "zoo = []\n",
+    "animals = [['elephant','eric',600],['elephant','eugene',650],['raccoon','rocky',10],['raccoon','rick',15],\n",
+    "          ['gorilla','gary',350],['tiger','tim',400],['tiger','trish',375],['tiger','tina',400]]\n",
+    "for animal in animals:\n",
+    "    add_animal_to_zoo(zoo,animal[0],animal[1],animal[2])\n",
+    "\n",
+    "zoo"
    ]
   },
   {
@@ -224,12 +292,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    if time == 'Day':\n",
+    "        for animal in zoo:\n",
+    "            if animal.nocturnal == False:\n",
+    "                if animal.food_type == 'herbivore':\n",
+    "                    animal.eat('plants')\n",
+    "                else:\n",
+    "                    animal.eat('meat')\n",
+    "    else:\n",
+    "        for animal in zoo:\n",
+    "            if animal.nocturnal == True:\n",
+    "                if animal.food_type == 'herbivore':\n",
+    "                    animal.eat('plants')\n",
+    "                else:\n",
+    "                    animal.eat('meat')"
    ]
   },
   {
@@ -241,10 +322,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eric the elephant thinks plants is yummy!\n",
+      "eugene the elephant thinks plants is yummy!\n",
+      "gary the gorilla thinks plants is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,10 +350,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rocky the raccoon thinks meat is yummy!\n",
+      "rick the raccoon thinks meat is yummy!\n",
+      "tim the tiger thinks meat is yummy!\n",
+      "trish the tiger thinks meat is yummy!\n",
+      "tina the tiger thinks meat is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(zoo,'Night')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
